--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,8 @@ body, * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    font-family: system-ui;
     overflow: hidden;
+    font-family: 'Microsoft YaHei', system-ui, sans-serif;
 }
 
 .el-menu {
