省份城市curd开发完毕

--- a/src/index.css
+++ b/src/index.css
@@ -119,6 +119,11 @@ div.el-select {
     width: 100%;
 }
 
+/*树形列表字体设置*/
+span.el-tree-node__label {
+    font-size: 12px;
+}
+
 a {
     text-decoration: none;
 }
