--- a/src/index.css
+++ b/src/index.css
@@ -174,6 +174,9 @@ span.tree-node * {
 .tree-node-title {
     padding-left: 6px;
 }
+span.el-tree__empty-text{
+    font-size: 12px;
+}
 
 a {
     text-decoration: none;
