--- a/src/index.css
+++ b/src/index.css
@@ -102,6 +102,7 @@ header.el-drawer__header {
     align-items: center;
     padding: 4px 0 12px 0;
     border-bottom: solid 1px #f1f1f1;
+    height: 40px;
 }
 
 /*抽屉标题样式字体*/
