--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,11 @@ li.el-sub-menu.menu-level2 div {
     background-color: #232427 !important;
 }
 
+/*一级、二级背景鼠标热点样式*/
+div.el-sub-menu__title:hover, li.el-sub-menu.menu-level2 div:hover {
+    background-color: #38404a !important;
+}
+
 /*菜单选中样式*/
 li .is-active {
     background-color: #2d8cf0 !important;
@@ -69,6 +74,7 @@ li .is-active {
 li.el-menu-item:hover {
     background-color: #38404a;
 }
+
 
 /*所有的table表头统一加一个淡淡的灰色背景*/
 table.el-table__header > thead > tr > th.el-table__cell {
@@ -188,19 +194,23 @@ span.tree-node * {
 span.el-tree__empty-text {
     font-size: 12px;
 }
+
 /*表单尾部追加的图标确保均匀分布*/
-div.el-input-group__append,div.el-input-group__prepend{
+div.el-input-group__append, div.el-input-group__prepend {
     display: flex;
     justify-content: space-around;
-    padding:0 10px;
+    padding: 0 10px;
 }
-.el-button--small{
+
+.el-button--small {
     padding: 4px 4px;
 }
+
 a {
     text-decoration: none;
 }
-.auth-list-title{
+
+.auth-list-title {
     width: 100%;
     border-bottom: 1px solid #f1f1f1;
     margin: 5px 7px;
