--- a/src/index.css
+++ b/src/index.css
@@ -63,6 +63,9 @@ li.el-sub-menu.menu-level2 div {
 div.el-sub-menu__title:hover, li.el-sub-menu.menu-level2 div:hover {
     background-color: #38404a !important;
 }
+li.el-sub-menu.menu-level2 div{
+    border-top: #404141 solid 1px;
+}
 
 /*菜单选中样式*/
 li .is-active {
