--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body, * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    overflow: hidden;
+    /*overflow: hidden;*/
     font-size: 12px;
     font-family: 'Microsoft YaHei', system-ui, sans-serif;
 }
